2009-04-03  Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R: Remove weightLogical since it does not return a
	dgCMatrix.

	* R/termdocmatrix.R: Further work on new TermDocumentMatrix.

2009-03-28  Ingo Feinerer  <feinerer@logic.at>

	* inst/doc/extensions.Rnw: Finished vignette.

2009-03-27  Ingo Feinerer  <feinerer@logic.at>

	* R/termdocmatrix.R: Start to work on new TermDocumentMatrix and
	DocumentTermMatrix representations.

2009-03-23  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readXML): New reader for arbitrary XML files.

2009-03-22  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (CSVSource): Defunct (use DataframeSource instead).
	(XMLSource): New XMLSource class for arbitrary XML files.
	(Source): New slot Vectorized.

2009-03-21  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readCustom): Experimental reader which can be
	customized via user-defined mappings.

	* R/reader.R: Always use UTC time zone.

	* R/AAA.R (.onLoad): No longer try to start a MPI cluster.

2009-03-20  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readDOC): Options can be passed over to antiword.

	* R/reader.R (readPDF): Options can be passed over to pdfinfo and
	pdftotext.

2009-03-10  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (DirSource): Add pattern and ignore.case arguments
	which are internally passed over to list.files().

2009-03-02  Ingo Feinerer  <feinerer@logic.at>

	* inst/doc/tm.Rnw: Suppress pointless loading message.

2009-01-29  Ingo Feinerer  <feinerer@logic.at>

	* DESCRIPTION: Speed up package loading (via moving packages not
	strictly necessary for normal operation to Suggests instead of
	Depends).

2009-01-08  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readNewsgroup): The date format is now configurable.

2008-12-20  Ingo Feinerer  <feinerer@logic.at>

	* R/preprocess.R (convertMboxEml): Fix off-by-one error.

2008-12-16  Ingo Feinerer  <feinerer@logic.at>

	* R/termdocmatrix.R (TermDocMatrix): Sort row indices.
